After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751780 - avidemux: Fix the return type of index_entry_offset_search
avidemux: Fix the return type of index_entry_offset_search
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.5.2
Other Linux
: Normal minor
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-01 12:54 UTC by Jimmy Ohn
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the return type of the index_entry_offset_search function. (873 bytes, patch)
2015-07-01 12:57 UTC, Jimmy Ohn
committed Details | Review

Description Jimmy Ohn 2015-07-01 12:54:44 UTC
Fix the return type of the index_entry_offset_search function. It should be modify return type to integer.
Comment 1 Jimmy Ohn 2015-07-01 12:57:17 UTC
Created attachment 306494 [details] [review]
Fix the return type of the index_entry_offset_search function.
Comment 2 Tim-Philipp Müller 2015-07-01 18:20:28 UTC
Comment on attachment 306494 [details] [review]
Fix the return type of the index_entry_offset_search function.

Minor commit message / bug description comment:

>It should be modify from unsigned integer to integer type.

You mention *what* should be done, but please don't forget to add *why* something should be done (i.e. justify your claim / provide a rationale for the change).
Comment 3 Tim-Philipp Müller 2015-07-01 18:20:45 UTC
commit 4f4605f4819c64ce557e25ef5987f463a49ee695
Author: Jimmy Ohn <yongjin.ohn@lge.com>
Date:   Wed Jul 1 21:46:46 2015 +0900

    avidemux: fix return type of index_entry_offset_search()
    
    It's a compare function and may return a negative value,
    so should for correctness and consistency return a signed
    integer.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751780
Comment 4 Jimmy Ohn 2015-07-02 11:34:27 UTC
(In reply to Tim-Philipp Müller from comment #2)
> Comment on attachment 306494 [details] [review] [review]
> Fix the return type of the index_entry_offset_search function.
> 
> Minor commit message / bug description comment:
> 
> >It should be modify from unsigned integer to integer type.
> 
> You mention *what* should be done, but please don't forget to add *why*
> something should be done (i.e. justify your claim / provide a rationale for
> the change).

Thanks for your review. I'll keep in mind for your comment.